Fix trash icon visible and functional

--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,7 @@ ul {
     display: none;
 }
 
-.visible {
+.item:hover > .icon_del {
     display: block;
 }
 
